Fix left item width on tablet/mobile on footer-a

--- a/src/scss/framework/components/footer/_c--footer-a.scss
+++ b/src/scss/framework/components/footer/_c--footer-a.scss
@@ -70,6 +70,7 @@
             
             &__item-left {
                 min-height: unset;
+                max-width: 100%;
                 padding: $measure * 7 0;
                 
                 &__list-group {
